[package]
name = "cherno_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bevy_puffin = "0.3.0"
egui_dock = "0.4.1"
image = "0.24.4"
nanorand = "0.7.0"
puffin = "0.14.2"
puffin_egui = "0.20.0"
rayon = "1.5.3"
