[package]
name = "cherno_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.2"
bevy_puffin = "0.3.0"
egui_dock = "0.4.2"
image = "0.24.6"
nanorand = "0.7.0"
puffin = "0.14.3"
puffin_egui = "0.20.0"
rayon = "1.7.0"
